--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -9,10 +9,15 @@
     android:background="@drawable/bg"
     tools:context=".MainActivity" >
 
+    <!--
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/hello_world" />
+        
+        -->
+    
+    
 
     <Button
         android:id="@+id/button1"
@@ -22,7 +27,45 @@
         android:layout_alignParentRight="true"
         android:layout_marginBottom="15dp"
         android:layout_marginRight="15dp"
-        android:text="Menu" />
+        android:text="Menu" 
+        android:visibility="visible"
+        />
+    
+   
+
+    <GridLayout
+        android:id="@+id/grid1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/button1"
+        android:layout_marginBottom="111dp"
+        android:layout_marginRight="211dp"
+        android:layout_toLeftOf="@+id/button1" >
+        
+         <View
+    android:id="@+id/myRectangleView"
+    android:layout_width="200dp"
+    android:layout_height="50dp"
+    android:background="@drawable/rectangle"
+    android:visibility="gone">
+    
+   <Button
+        android:id="@+id/button2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        
+        android:layout_marginBottom="15dp"
+        android:layout_marginRight="15dp"
+        android:text="Close" 
+        />             
+             
+    </View>
+        
+        
+    
+        
+        
+    </GridLayout>
 
 </RelativeLayout>
 
