--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -16,56 +16,147 @@
         android:text="@string/hello_world" />
         
         -->
-    
-    
 
-    <Button
-        android:id="@+id/button1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        android:layout_marginBottom="15dp"
-        android:layout_marginRight="15dp"
-        android:text="Menu" 
-        android:visibility="visible"
-        />
-    
-   
 
-    <GridLayout
-        android:id="@+id/grid1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/button1"
-        android:layout_marginBottom="111dp"
-        android:layout_marginRight="211dp"
-        android:layout_toLeftOf="@+id/button1" >
-        
-         <View
-    android:id="@+id/myRectangleView"
-    android:layout_width="200dp"
-    android:layout_height="50dp"
-    android:background="@drawable/rectangle"
-    android:visibility="gone">
-    
-   <Button
-        android:id="@+id/button2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        
-        android:layout_marginBottom="15dp"
-        android:layout_marginRight="15dp"
-        android:text="Close" 
-        />             
-             
-    </View>
-        
-        
-    
-        
-        
-    </GridLayout>
+    <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/scrollView"
+            android:layout_alignParentRight="true">
+
+        <GridLayout
+            android:id="@+id/grid1"
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:visibility="visible"
+            android:layout_centerInParent="true"
+            android:columnCount="3"
+            android:rowCount="5">
+
+            <ImageButton
+                    android:id="@+id/image1"
+                    android:layout_height="150dp"
+                    android:layout_width="150dp"
+                    android:layout_marginLeft="40dp"
+                    android:layout_marginRight="20dp"
+                    android:layout_marginBottom="20dp"
+                    android:layout_row="0"
+                    android:layout_column="0"/>
+            <ImageButton
+                    android:id="@+id/image2"
+                    android:layout_height="150dp"
+                    android:layout_width="150dp"
+                    android:layout_marginRight="20dp"
+                    android:layout_row="0"
+                    android:layout_column="1"/>
+            <ImageButton
+                    android:id="@+id/image3"
+                    android:layout_height="150dp"
+                    android:layout_width="150dp"
+                    android:layout_marginRight="20dp"
+                    android:layout_row="0"
+                    android:layout_column="2"/>
+
+            <ImageButton
+                    android:id="@id/image1"
+                    android:layout_height="150dp"
+                    android:layout_width="150dp"
+                    android:layout_marginLeft="40dp"
+                    android:layout_marginRight="20dp"
+                    android:layout_marginBottom="20dp"
+                    android:layout_row="1"
+                    android:layout_column="0"/>
+            <ImageButton
+                    android:id="@id/image2"
+                    android:layout_height="150dp"
+                    android:layout_width="150dp"
+                    android:layout_marginRight="20dp"
+                    android:layout_row="1"
+                    android:layout_column="1"/>
+            <ImageButton
+                    android:id="@id/image3"
+                    android:layout_height="150dp"
+                    android:layout_width="150dp"
+                    android:layout_marginRight="20dp"
+                    android:layout_row="1"
+                    android:layout_column="2"/>
+
+            <ImageButton
+                    android:id="@id/image1"
+                    android:layout_height="150dp"
+                    android:layout_width="150dp"
+                    android:layout_marginLeft="40dp"
+                    android:layout_marginRight="20dp"
+                    android:layout_marginBottom="20dp"
+                    android:layout_row="2"
+                    android:layout_column="0"/>
+            <ImageButton
+                    android:id="@id/image2"
+                    android:layout_height="150dp"
+                    android:layout_width="150dp"
+                    android:layout_marginRight="20dp"
+                    android:layout_row="2"
+                    android:layout_column="1"/>
+            <ImageButton
+                    android:id="@id/image3"
+                    android:layout_height="150dp"
+                    android:layout_width="150dp"
+                    android:layout_marginRight="20dp"
+                    android:layout_row="2"
+                    android:layout_column="2"/>
+
+            <ImageButton
+                    android:id="@id/image1"
+                    android:layout_height="150dp"
+                    android:layout_width="150dp"
+                    android:layout_marginLeft="40dp"
+                    android:layout_marginRight="20dp"
+                    android:layout_marginBottom="20dp"
+                    android:layout_row="3"
+                    android:layout_column="0"/>
+            <ImageButton
+                    android:id="@id/image2"
+                    android:layout_height="150dp"
+                    android:layout_width="150dp"
+                    android:layout_marginRight="20dp"
+                    android:layout_row="3"
+                    android:layout_column="1"/>
+            <ImageButton
+                    android:id="@id/image3"
+                    android:layout_height="150dp"
+                    android:layout_width="150dp"
+                    android:layout_marginRight="20dp"
+                    android:layout_row="3"
+                    android:layout_column="2"/>
+
+            <ImageButton
+                    android:id="@id/image1"
+                    android:layout_height="150dp"
+                    android:layout_width="150dp"
+                    android:layout_marginLeft="40dp"
+                    android:layout_marginRight="20dp"
+                    android:layout_marginBottom="20dp"
+                    android:layout_row="4"
+                    android:layout_column="0"/>
+            <ImageButton
+                    android:id="@id/image2"
+                    android:layout_height="150dp"
+                    android:layout_width="150dp"
+                    android:layout_marginRight="20dp"
+                    android:layout_row="4"
+                    android:layout_column="1"/>
+            <ImageButton
+                    android:id="@id/image3"
+                    android:layout_height="150dp"
+                    android:layout_width="150dp"
+                    android:layout_marginRight="20dp"
+                    android:layout_row="4"
+                    android:layout_column="2"/>
+
+        </GridLayout>
+    </ScrollView>
+
 
 </RelativeLayout>
 
