Set onclick for exit button on screen in Weather. Removed Wind degree in Weather Activity

--- a/res/layout/activity_weather.xml
+++ b/res/layout/activity_weather.xml
@@ -22,8 +22,7 @@
         <ImageButton
                 android:id="@+id/backButton"
                 android:src="@android:drawable/ic_menu_close_clear_cancel"
-                android:onClick="closeActivity"
-                android:alpha=".8"/>
+                android:alpha=".8" android:contentDescription="@string/exit_string" android:onClick="onClick"/>
 
         <!--<FrameLayout-->
                 <!--android:id="@+id/mainContent"-->
