--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -17,6 +17,16 @@
         
         -->
 
+    <FrameLayout
+            android:id="@+id/camera_preview"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent">
+    </FrameLayout>
+
+    <SurfaceView
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:id="@+id/surfaceView"/>
     <ScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
