--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -22,11 +22,14 @@
             android:layout_width="fill_parent"
             android:layout_height="fill_parent">
     </FrameLayout>
-
+<!--  
     <SurfaceView
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:id="@+id/surfaceView"/>
+            
+            -->
+            
     <ScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -178,6 +181,14 @@
 
         </GridLayout>
     </ScrollView>
+        <ImageView
+            android:id="@+id/imageView1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:scaleType="fitXY"
+            android:visibility="invisible"
+            android:src="@drawable/ic_launcher" />
+
 
 
 </RelativeLayout>
