correction to activity_main.xml regarding the camera preview

--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -183,8 +183,8 @@
     </ScrollView>
         <ImageView
             android:id="@+id/imageView1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
             android:scaleType="fitXY"
             android:visibility="invisible"
             android:src="@drawable/ic_launcher" />
