Added camera code to weather app.  We need to disable the camera from the main activity before weather can use it.

--- a/res/layout/activity_weather.xml
+++ b/res/layout/activity_weather.xml
@@ -121,4 +121,11 @@
         </RelativeLayout>
 
     </GridLayout>
+    <ImageView
+            android:id="@+id/imageView1"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:scaleType="fitXY"
+            android:visibility="invisible"
+            android:src="@drawable/ic_launcher" />
 </RelativeLayout>
