--- a/res/layout/activity_weather.xml
+++ b/res/layout/activity_weather.xml
@@ -1,41 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 xmlns:tools="http://schemas.android.com/tools"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:paddingBottom="@dimen/activity_vertical_margin"
-                android:paddingLeft="@dimen/activity_horizontal_margin"
-                android:paddingRight="@dimen/activity_horizontal_margin"
-                android:paddingTop="@dimen/activity_vertical_margin"
-                android:background="@drawable/bg"
                 tools:context=".WeatherActivity" >
 
+    <FrameLayout
+        android:id="@+id/camera_preview"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent">
+    </FrameLayout>
+
     <GridLayout
-            android:layout_width="wrap_content"
-            android:layout_height="fill_parent"
-            android:layout_alignParentTop="true"
-            android:columnCount="2"
-            android:rowCount="1"
-            android:layout_centerInParent="true">
+        android:layout_width="wrap_content"
+        android:layout_height="fill_parent"
+        android:layout_alignParentTop="true"
+        android:columnCount="2"
+        android:rowCount="1"
+        android:layout_centerInParent="true">
 
         <ImageButton
-                android:id="@+id/backButton"
-                android:src="@android:drawable/ic_menu_close_clear_cancel"
-                android:alpha=".8" android:contentDescription="@string/exit_string" android:onClick="onClick"/>
-
-        <!--<FrameLayout-->
-                <!--android:id="@+id/mainContent"-->
-                <!--android:layout_width="match_parent"-->
-                <!--android:layout_height="match_parent"-->
-                <!--android:layout_row="0" android:layout_column="0"-->
-                <!--android:background="@drawable/rectangle" android:alpha="1" android:layout_rowSpan="0" android:layout_columnSpan="0">-->
+            android:id="@+id/backButton"
+            android:src="@android:drawable/ic_menu_close_clear_cancel"
+            android:alpha=".8" android:contentDescription="@string/exit_string" android:onClick="onClick"/>
 
         <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                        android:id="@+id/mainContent"
-                        android:layout_width="300dp"
-                        android:layout_height="wrap_content"
-                        android:background="@drawable/rectangle" android:layout_gravity="center">
+            android:id="@+id/mainContent"
+            android:layout_width="300dp"
+            android:layout_height="wrap_content"
+            android:background="@drawable/rectangle" android:layout_gravity="center">
 
             <TextView
                     android:id="@+id/cityText"
@@ -121,11 +114,4 @@
         </RelativeLayout>
 
     </GridLayout>
-    <ImageView
-            android:id="@+id/imageView1"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:scaleType="fitXY"
-            android:visibility="invisible"
-            android:src="@drawable/ic_launcher" />
 </RelativeLayout>
